[FIX] web: adjust bg color for search_panel on mobile
This commit adjusts the search_panel background color so it adapts
correctly to both light and dark modes on mobile.
It only affects the "bottom sheet" use case.

task-5121027

closes odoo/odoo#234658

X-original-commit: f1169bccbede8ed5f972f51eba42f8e662be7077
Related: odoo/enterprise#98968

--- a/addons/web/static/src/search/search_panel/search_panel.scss
+++ b/addons/web/static/src/search/search_panel/search_panel.scss
@@ -71,3 +71,9 @@
         align-items: initial;
     }
 }
+
+.o_search_panel_section {
+    .o_bottom_sheet & .list-group {
+        --#{$prefix}list-group-bg: transparent;
+    }
+}
